force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Custom_Actions__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Custom_Actions__c</fullName>
    <formula>HYPERLINK(&#39;/apex/CHANNEL_ORDERS__COA_CloneServiceOrder?id=&#39;+Id , $Label.channel_orders__custom_action_clone)&amp;&#39; &#39;&amp;IF( CHANNEL_ORDERS__Service_Order_Status1__c == &#39;Received&#39;, &#39;| &#39;+HYPERLINK(&#39;/apex/CHANNEL_ORDERS__COA_RecallServiceOrder?id=&#39;+Id, $Label.channel_orders__custom_action_recall)&amp;&#39; &#39;, &#39;&#39;)</formula>
    <label>Custom Actions</label>
    <type>Text</type>
</CustomField>