force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Company_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Company_Name_Formula__c</fullName>
    <formula>IF(AND(NOT(ISNULL(CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c)), NOT(ISBLANK(CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c))), HYPERLINK(&#39;/&#39;&amp;CHANNEL_ORDERS__Customer__c, CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c, &#39;_self&#39;), CHANNEL_ORDERS__Customer_Name__c)</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>