force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__I_certify__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__I_certify__c</fullName>
    <inlineHelpText>Certification that a corresponding customer order has been received.  This is a required field</inlineHelpText>
    <label>I Certify a Corresponding Order Is Rec&#39;d</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>