force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Order_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Type_Formula__c</fullName>
    <description>Order Type showed to the user (with &#39;Renewal&#39; instead of &#39;Upgrade - Partner App&#39; and &#39;Upgrade&#39; instead of &#39;Upgrade - Org Edition&#39;)</description>
    <formula>IF(Text(CHANNEL_ORDERS__Order_Type__c) == &quot;Upgrade - Partner App&quot;, &quot;Renewal&quot;, 
IF(Text(CHANNEL_ORDERS__Order_Type__c) == &quot;Upgrade - Org Edition&quot;, &quot;Upgrade&quot;, Text(CHANNEL_ORDERS__Order_Type__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>