force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__Org_ID_is_invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Org_ID_is_invalid</fullName>
    <active>true</active>
    <errorConditionFormula>OR(not(begins( CHANNEL_ORDERS__Customer_Org_ID__c ,&quot;00D&quot;)),AND( LEN(CHANNEL_ORDERS__Customer_Org_ID__c) &lt;&gt;15))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
    <errorMessage>The Org ID you entered does not follow the valid format.  Org IDs should begin with &quot;00D&quot; and be 15 characters in length.</errorMessage>
</ValidationRule>